[tool.poetry]
name = "merge_movie"
version = "0.1.0"
description = ""
authors = ["Taiki <taiki.iwahori.bn@furuno.co.jp>"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.10.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
