[tool.poetry]
name = "merge_movie"
version = "0.1.0"
description = ""
authors = ["Taiki <taiki.iwahori.bn@furuno.co.jp>"]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
google-api-python-client = "^2.83.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
