[project]
name = "merge_movie"
version = "0.1.0"
description = ""
authors = [{ name = "Taiki", email = "taiki.iwahori.bn@furuno.co.jp" }]
requires-python = "~=3.11"
dependencies = [
    "black>=23.3.0,<24",
    "google-api-python-client>=2.83.0,<3",
    "google-auth-oauthlib>=1.0.0,<2",
    "google-auth-httplib2>=0.1.0,<0.2",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
